[build-system]
requires = [
    "setuptools>=45",
    "wheel",
    "setuptools_scm>=6.2",
    "setuptools_scm_git_archive",
    "pybind11>=2.8.0",
]

build-backend = "setuptools.build_meta"

[tool.black]
line-length = 105
exclude = '''
/(
    \..*
  | dist
  | wheelhouse
  | .*build
  | __pycache__
)/
'''

[tool.cibuildwheel]
test-command = 'python -c "import vroom"'
build = "cp*"
skip = "*musllinux* cp312*"
archs = "native"
manylinux-x86_64-image = "quay.io/pypa/manylinux2014_x86_64"

[tool.cibuildwheel.linux]
before-all = """
yum makecache
yum update -y
yum install -y epel-release
yum module enable -y mariadb-devel
yum install -y openssl-devel asio-devel glpk
"""

[[tool.cibuildwheel.overrides]]
select = "*musllinux*"
before-all = """
apk add asio-dev
apk add openssl-dev
apk add libglpk-dev
"""

[tool.cibuildwheel.macos]

before-all = """
brew install asio
"""
